--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul class="burger-menu__list">
           <li class="burger-menu__item">
             <a href="./">
-              <img src="../images/グループ 8.png" alt="シンボル" />
+              <img src="./images/グループ 8.png" alt="シンボル" />
             </a>
           </li>
           <li class="burger-menu__item"><a href="./about.html">About us</a></li>
